Fixed login/sign up form alignment and button

--- a/src/css/checkout.css
+++ b/src/css/checkout.css
@@ -25,6 +25,7 @@ sets font size for labels and input fields
     margin-top: 1em;
     margin-bottom: 1em;
     font-size:1.1em;
+    padding: 0.75em;
 }
 
 /*
